tests/interp/bad/exists-4.ngc
(Unknown word starting with f)
G0 X EXISTS[#foo]
M2
